--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 SECRET_KEY = "secret"
 DEBUG = "True"
 
+# DATABASE_URL="sqlite:///db.sqlite3"
+DATABASE_URL = "postgres://open_prices_team:password@localhost:/open_prices"
+
 # OpenFoodFacts
 OPENFOODFACTS_USERNAME = ""
 OPENFOODFACTS_PASSWORD = ""
