--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ django = "*"
 django-bootstrap5 = "*"
 django-environ = "*"
 gunicorn = "*"
+dj-database-url = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
