--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,10 @@ django-extensions = "*"
 django-debug-toolbar = "*"
 
 [dev-packages]
+black = "*"
+flake8 = "*"
+isort = "*"
+pre-commit = "*"
 
 [requires]
 python_version = "3.9"
