--- a/Pipfile
+++ b/Pipfile
@@ -15,8 +15,15 @@ gunicorn = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
 whitenoise = "*"
+django-extensions = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
+black = "*"
+flake8 = "*"
+isort = "*"
+pre-commit = "*"
+pygraphviz = "*"
 
 [requires]
 python_version = "3.9"
