--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ django-debug-toolbar = "*"
 django-tables2 = "*"
 djangorestframework = "*"
 django-filter = "*"
+drf-spectacular = "*"
 
 [dev-packages]
 black = "*"
