API : Lister & filtrer les prix (#6)
* Add djangorestframework & django-filter

* Add /api/prices endpoint

* Add filters

* Add DRF spectacular doc

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,9 @@ whitenoise = "*"
 django-extensions = "*"
 django-debug-toolbar = "*"
 django-tables2 = "*"
+djangorestframework = "*"
+django-filter = "*"
+drf-spectacular = "*"
 
 [dev-packages]
 black = "*"
