--- a/Pipfile
+++ b/Pipfile
@@ -21,13 +21,13 @@ django-tables2 = "*"
 djangorestframework = "*"
 django-filter = "*"
 drf-spectacular = "*"
+factory-boy = "*"
 
 [dev-packages]
 black = "*"
 flake8 = "*"
 isort = "*"
 pre-commit = "*"
-pygraphviz = "*"
 
 [requires]
 python_version = "3.9"
