--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ djangorestframework = "*"
 django-filter = "*"
 drf-spectacular = "*"
 factory-boy = "*"
+ipython = "*"
 
 [dev-packages]
 black = "*"
