--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,13 @@ SECRET_KEY = "secret"
 DEBUG = "True"
 
 # DATABASE_URL="sqlite:///db.sqlite3"
-DATABASE_URL = "postgres://open_prices_team:password@localhost:/open_prices"
+DATABASE_URL = "postgres://open_prices_team:password@localhost:/open_prices_poc"
 
 # OpenFoodFacts
 OPENFOODFACTS_USERNAME = ""
 OPENFOODFACTS_PASSWORD = ""
+OPENFOODFACTS_PRICES_URL = "https://prices.openfoodfacts.net"
+OPENFOODFACTS_PRICES_TOKEN = ""
 
 # Supabase
 SUPABASE_URL = ""
